--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "swiper": "^4.5.1",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-plain-pagination": "^0.3.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
