--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "slide": "^1.1.6",
     "swiper": "^4.5.1",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^3.1.3",
